
[TestImportWizardView_Success/import_completes - 1]
TestImportWizardView_Success/import_completes
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 0,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ImportWizardView",
      "Data": {
        "Type": "ImportWizardView",
        "Step": 2,
        "FilePath": "file.json",
        "HasContext": true,
        "Purpose": "Imported workspace",
        "RepoCount": 1,
        "PreserveHandle": false,
        "Force": false,
        "Done": true,
        "HasError": false
      }
    }
  ]
}
---

[TestImportWizardView_Success/dismiss_success - 1]
TestImportWizardView_Success/dismiss_success
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 0,
        "SelectedIndex": 0,
        "HasError": false
      }
    }
  ]
}
---
